# OmniOptimizer

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODOS.md  coco_val_only.yaml  pyproject.toml  qr_barcode.yaml  report.md  report_cpu_qr.md  report_qr.md  requirements.txt
docs/: architecture.md  qr_barcode_eval.md  qr_barcode_eval_v2.md  recipe-bank-summary.md  recipe-conversion-pipelines.md
recipes/: 00_trt_fp32.yaml  00_trt_fp32_tf32.yaml  01_pytorch_fp32.yaml  02_torchcompile_fp16.yaml  03_ort_cuda_fp16.yaml  04_ort_trt_fp16.yaml  05_trt_fp16.yaml  06_trt_int8_ptq.yaml  07_trt_int8_sparsity.yaml  08_modelopt_int8_ptq.yaml  09_modelopt_int8_entropy.yaml  10_modelopt_int8_percentile.yaml  11_modelopt_int8_sparsity.yaml  12_modelopt_int8_mixed.yaml  13_ort_int8_minmax.yaml  14_ort_int8_entropy.yaml  15_ort_int8_percentile.yaml  16_ort_int8_distribution.yaml  17_inc_int8_ptq.yaml  17_modelopt_int8_qat.yaml  18_inc_int8_smoothquant.yaml  19_inc_int8_qat.yaml  20_brevitas_int8_percentile.yaml  21_brevitas_int8_mse.yaml  23_brevitas_int8_gptq.yaml  23_modelopt_fastnas_int8.yaml  24_modelopt_fastnas_sp_int8.yaml  30_ort_cpu_fp32.yaml  31_ort_cpu_bf16.yaml  32_ort_cpu_int8_dynamic.yaml  33_ort_cpu_int8_static.yaml  34_openvino_fp32.yaml  35_openvino_int8_nncf.yaml  36_openvino_fastnas_int8_nncf.yaml  37_openvino_fastnas_fp32.yaml  38_ort_cpu_fastnas_fp32.yaml  40_trt_fp16_opt5.yaml  41_trt_bf16.yaml  42_modelopt_int8_asymmetric.yaml  README.md
results/: 00_trt_fp32.json  00_trt_fp32_tf32.json  01_pytorch_fp32.json  02_torchcompile_fp16.json  03_ort_cuda_fp16.json  04_ort_trt_fp16.json  05_trt_fp16.json  06_trt_int8_ptq.json  07_trt_int8_sparsity.json  08_modelopt_int8_ptq.json  09_modelopt_int8_entropy.json  10_modelopt_int8_percentile.json  11_modelopt_int8_sparsity.json  12_modelopt_int8_mixed.json  13_ort_int8_minmax.json  14_ort_int8_entropy.json  15_ort_int8_percentile.json  16_ort_int8_distribution.json  17_inc_int8_ptq.json  18_inc_int8_smoothquant.json  20_brevitas_int8_percentile.json  21_brevitas_int8_mse.json  22_brevitas_int8_entropy.json  _capabilities.json
results_cpu_qr/: 30_ort_cpu_fp32.json  31_ort_cpu_bf16.json  32_ort_cpu_int8_dynamic.json  33_ort_cpu_int8_static.json  34_openvino_fp32.json  35_openvino_int8_nncf.json  36_openvino_fastnas_int8_nncf.json  37_openvino_fastnas_fp32.json  38_ort_cpu_fastnas_fp32.json
results_qr/: 00_trt_fp32.json  00_trt_fp32_tf32.json  01_pytorch_fp32.json  02_torchcompile_fp16.json  03_ort_cuda_fp16.json  04_ort_trt_fp16.json  05_trt_fp16.json  06_trt_int8_ptq.json  07_trt_int8_sparsity.json  08_modelopt_int8_ptq.json  09_modelopt_int8_entropy.json  10_modelopt_int8_percentile.json  11_modelopt_int8_sparsity.json  12_modelopt_int8_mixed.json  13_ort_int8_minmax.json  14_ort_int8_entropy.json  15_ort_int8_percentile.json  16_ort_int8_distribution.json  17_modelopt_int8_qat.json  20_brevitas_int8_percentile.json  21_brevitas_int8_mse.json  23_modelopt_fastnas_int8.json  24_modelopt_fastnas_sp_int8.json  40_trt_fp16_opt5.json  41_trt_bf16.json  42_modelopt_int8_asymmetric.json  _summary.json
scripts/: _compare_wave15.py  _recover_modelopt.py  _schemas.py  _spike_brevitas_audit.py  _spike_wave10_p1_finetune.py  _spike_wave10_p1b_bench.py  _spike_wave10_p2_torchpruning.py  _spike_wave10_p3_native.py  _spike_wave10_p4_chain.py  _spike_wave10_p4b_chain.py  _spike_wave10_p4c_sparsity_ft.py  _spike_wave10_p5_cpu_bench.py  _spike_wave10_p6_gpu_mem.py  _spike_wave10_p7_fair_bench.py  _spike_wave10_p8_modelopt_onnx.py  _spike_wave10_p9_ship.py  _spike_wave10_r1.py  _spike_wave10_r1_restore.py  _spike_wave10_sweep.py  _spike_wave6_r1.py  _spike_wave7_r3.py  _spike_wave8_r1.py  _spike_wave9_r1_dml.py  _spike_wave9_r2_device_sweep.py  _split.py  _train_core.py  _weights_io.py  audit_capabilities.py  env_lock.py  (+12 more)
(+70 files in other folders)
